fix 100vh on mobile

--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
 }
 sup { 
   vertical-align: super;
